fix(homepage): spacing, padding and bg color

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -88,7 +88,7 @@
 }
 
 .lt-innovation-wrapper {
-  padding: 30px 0;
+  padding: 65px 0;
   .lt-container {
     position: relative;
     font-size: 0;
@@ -105,7 +105,7 @@
   position: absolute;
   left: 50%; top: 0;
   height: 100%;
-  margin: 0 0 0 30px;
+  margin: 0 0 0 40px;
 }
 .lt-innovation-title {
   font-size: 36px;
@@ -139,8 +139,13 @@
   }
 }
 
+
+.lt-references-wrapper {
+  padding: 40px 0;
+  background-color: @lightGrey;
+}
+
 .lt-references-title {
-  margin: 45px 0 0 0;
   font-size: 26px;
   color: purple;
 }
@@ -155,6 +160,7 @@
   width: 129px; height: 76px;
   background-color: grey;
 }
+
 
 .lt-contact-wrapper {
   padding: 50px 0 50px 0;
